# filenavi

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
filenavi/: __init__.py  model.py  wsgi.py
filenavi/routing/: conv.py  error.py  site.py  storage.py  user.py  wrap.py
filenavi/static/: style.css  upload.js
filenavi/static/for/storage/: main.css  main.js
filenavi/static/for/user/: delete.css
filenavi/templates/: layout.html  meta.html
filenavi/templates/site/: login.html
filenavi/templates/storage/: browse.html  main.html  move.html  remove.html  settings.html  toggle.html
filenavi/templates/user/: delete.html  identifier.html  name.html  password.html  profile.html  rank.html  register.html
sfstash/: __init__.py  model.py  wsgi.py
sfstash/routing/: __init__.py  conv.py  error.py  site.py  storage.py  user.py  wrap.py
sfstash/static/: style.css
sfstash/static/for/site/: login.css
sfstash/static/for/storage/: settings.css
sfstash/static/for/user/: password.css  profile.css  settings.css
sfstash/templates/: meta.html
sfstash/templates/storage/: main.html
sfstash/templates/user/: delete.html  profile.html  security.html  settings.html
